<resources>
    <string name="app_name">Sunshine Weather</string>

    <!-- Action bar -->
    <string name="action_share">Share</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_map" translatable="false">Map</string>

    <!-- Activity titles -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail">Detail</string>

    <!-- Strings related to Settings -->

    <!-- Location settings -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Temperature units settings -->
    <string name="pref_units_label">Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_default" translatable="false">Metric</string>
    <string name="pref_units_metric" translatable="false">Metric</string>
    <string name="pref_units_imperial" translatable="false">Imperial</string>
    <string-array name="pref_units_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_units_entry_values">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

</resources>
